--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "jwt-decode": "^2.2.0",
     "materialize-css": "^1.0.0",
     "moment": "^2.24.0",
+    "papaparse": "^5.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-materialize": "^3.3.1",
