--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "papaparse": "^5.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-infinite-scroll-component": "^4.5.2",
     "react-materialize": "^3.3.1",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1"
