--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-markdown": "^4.2.2",
     "react-materialize": "^3.3.1",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "react-select": "^3.0.8"
   },
   "scripts": {
     "start": "react-scripts start",
