--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-materialize": "^3.3.1",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
-    "react-select": "^3.0.8"
+    "react-select": "^3.0.8",
+    "styled-components": "^4.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
