--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "framer-motion": "^1.8.4",
     "jwt-decode": "^2.2.0",
     "materialize-css": "^1.0.0",
     "moment": "^2.24.0",
@@ -14,7 +15,7 @@
     "react-markdown": "^4.2.2",
     "react-materialize": "^3.4.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.0.1",
+    "react-scripts": "^3.4.0",
     "react-select": "^3.0.8",
     "styled-components": "^4.4.1"
   },
